Obtener información de snapshots

--- a/roles/restore_snapshot/tasks/main.yml
+++ b/roles/restore_snapshot/tasks/main.yml
@@ -1,13 +1,24 @@
 ---
-- name: Restarurar snapshot de maquina virtual en VMWare
-  community.vmware.vmware_guest_snapshot:
+- name: Obtener información de snapshots
+  community.vmware.vmware_guest_snapshot_info:
     hostname: '{{ lookup("env", "VMWARE_HOST") }}'
     username: '{{ lookup("env", "VMWARE_USER") }}'
     password: '{{ lookup("env", "VMWARE_PASSWORD") }}'
-    vm_name: TSECWVC001
-    snapshot_id: 
-    validate_certs: false
+    datacenter: "{{ vmware_datacenter }}"
+    vm_name: "{{ nombre_server }}"
   delegate_to: localhost
-  register: registro_informacion_vmware
+  register: registro_informacion_snapshots
   changed_when: false
+
+# - name: Restarurar snapshot de maquina virtual en VMWare
+#   community.vmware.vmware_guest_snapshot:
+    # hostname: '{{ lookup("env", "VMWARE_HOST") }}'
+    # username: '{{ lookup("env", "VMWARE_USER") }}'
+    # password: '{{ lookup("env", "VMWARE_PASSWORD") }}'
+#     vm_name: TSECWVC001
+#     snapshot_id: 
+#     validate_certs: false
+#   delegate_to: localhost
+#   register: registro_informacion_vmware
+#   changed_when: false
 ...
