--- a/restore.yml
+++ b/restore.yml
@@ -3,7 +3,7 @@
   hosts: localhost
 
   roles:
-    - role: resotre_snapshot
+    - role: restore_snapshot
       vars:
         nombre_server: "clarovm01"
         nombre_snapshot: "snapshot_jobID-248_2025-07-15"
