--- a/roles/restore_snapshot/tasks/main.yml
+++ b/roles/restore_snapshot/tasks/main.yml
@@ -1,10 +1,21 @@
 ---
+- name: Obtener informacion de maquina virtual en VMWare
+  community.vmware.vmware_vm_info:
+    hostname: '{{ lookup("ansible.builtin.env", "VMWARE_HOST") }}'
+    username: '{{ lookup("ansible.builtin.env", "VMWARE_USER") }}'
+    password: '{{ lookup("ansible.builtin.env", "VMWARE_PASSWORD") }}'
+    vm_name: "{{ nombre_server }}"
+    validate_certs: false
+  delegate_to: localhost
+  register: registro_informacion_vmware
+  changed_when: false
+
 - name: Obtener información de snapshots
   community.vmware.vmware_guest_snapshot_info:
     hostname: '{{ lookup("env", "VMWARE_HOST") }}'
     username: '{{ lookup("env", "VMWARE_USER") }}'
     password: '{{ lookup("env", "VMWARE_PASSWORD") }}'
-    datacenter: "{{ vmware_datacenter }}"
+    datacenter: "{{ registro_informacion_vmware.virtual_machines.0.datacenter }}"
     vm_name: "{{ nombre_server }}"
   delegate_to: localhost
   register: registro_informacion_snapshots
