--- a/roles/restore_snapshot/tasks/main.yml
+++ b/roles/restore_snapshot/tasks/main.yml
@@ -7,30 +7,33 @@
     vm_name: "{{ nombre_server }}"
     validate_certs: false
   delegate_to: localhost
-  register: registro_informacion_vmware
+  register: restore_snapshot_vm_info
   changed_when: false
 
-- name: Obtener información de snapshots
-  community.vmware.vmware_guest_snapshot_info:
+# - name: Obtener información de snapshots
+#   community.vmware.vmware_guest_snapshot_info:
+#     hostname: '{{ lookup("env", "VMWARE_HOST") }}'
+#     username: '{{ lookup("env", "VMWARE_USER") }}'
+#     password: '{{ lookup("env", "VMWARE_PASSWORD") }}'
+#     datacenter: "{{ restore_snapshot_vm_info.virtual_machines[0]['datacenter'] }}"
+#     name: "{{ nombre_server }}"
+#     folder: "{{ restore_snapshot_vm_info.virtual_machines[0]['folder'] }}"
+#   delegate_to: localhost
+#   register: registro_informacion_snapshots
+#   changed_when: false
+
+- name: Restaurar snapshot de maquina virtual en VMWare
+  community.vmware.vmware_guest_snapshot:
     hostname: '{{ lookup("env", "VMWARE_HOST") }}'
     username: '{{ lookup("env", "VMWARE_USER") }}'
     password: '{{ lookup("env", "VMWARE_PASSWORD") }}'
-    datacenter: "{{ registro_informacion_vmware.virtual_machines.0.datacenter }}"
+    datacenter: "{{ restore_snapshot_vm_info.virtual_machines[0]['datacenter'] }}"
+    folder: "{{ restore_snapshot_vm_info.virtual_machines[0]['folder'] }}"
     name: "{{ nombre_server }}"
-    folder: "{{ registro_informacion_vmware.virtual_machines.0.folder }}"
+    snapshot_name: "{{ nombre_snapshot }}"
+    validate_certs: false
+    state: revert
   delegate_to: localhost
-  register: registro_informacion_snapshots
+  register: restore_snapshot_vm_info
   changed_when: false
-
-# - name: Restarurar snapshot de maquina virtual en VMWare
-#   community.vmware.vmware_guest_snapshot:
-    # hostname: '{{ lookup("env", "VMWARE_HOST") }}'
-    # username: '{{ lookup("env", "VMWARE_USER") }}'
-    # password: '{{ lookup("env", "VMWARE_PASSWORD") }}'
-#     vm_name: TSECWVC001
-#     snapshot_id: 
-#     validate_certs: false
-#   delegate_to: localhost
-#   register: registro_informacion_vmware
-#   changed_when: false
 ...
