--- a/roles/obtain_snapshots/tasks/main.yml
+++ b/roles/obtain_snapshots/tasks/main.yml
@@ -21,10 +21,15 @@
   register: obtain_snapshots_info
   changed_when: false
 
-- name: Imprimiendo snapshots disponibles
-  ansible.builtin.debug:
-    msg: "Nombre: {{ item['name'] }}. ID: {{ item['id'] }}"
+- name: Crear información de snapshots
+  ansible.builtin.set_fact:
+    obtain_snapshots_parsed: "{{ obtain_snapshots_parsed | deafult([]) +
+      [[] | combine({'nombre': item['name'], 'id': item['id']})] }}"
   loop: "{{ obtain_snapshots_info['guest_snapshots']['snapshots'] }}"
   loop_control:
     label: "Información de snapshot {{ item['name'] }}"
+
+- name: Imprimiendo snapshots disponibles
+  ansible.builtin.debug:
+    var: obtain_snapshots_parsed
 ...
